--- a/MoyNalog/MoyNalog.csproj
+++ b/MoyNalog/MoyNalog.csproj
@@ -9,6 +9,22 @@
     <Authors>TrifonovDV</Authors>
     <Description>Библиотека для работы с личным кабинетом самозанятого</Description>
     <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/Freem27/MoyNalog</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Freem27/MoyNalog</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.MD</PackageReadmeFile>
+	<Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.MD">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
